--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,7 @@
 
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_person_info">personInfoActivity</string>
+    <string name="title_activity_login_comfirm">LoginComfirmActivity</string>
 
 </resources>
