--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,8 @@
     <string name="title_activity_income_">Income_Activity</string>
     <string name="title_activity_income2_">income2_Activity</string>
     <string name="title_activity_income_confirm">Income_confirm</string>
+    <string name="title_activity_refund_">Refund_Activity</string>
+    <string name="title_activity_confirm_refund">ConfirmRefundActivity</string>
 
 
 </resources>
