--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="title_activity_income_confirm">Income_confirm</string>
     <string name="title_activity_refund_">Refund_Activity</string>
     <string name="title_activity_confirm_refund">ConfirmRefundActivity</string>
+    <string name="title_activity_welcome_page">WelcomePageActivity</string>
 
 
 </resources>
